# SysOpy

./: .gitignore
cw01/: CMakeLists.txt
cw01/zad1/: CMakeLists.txt  char_blocks.c  char_blocks.h  structures.h
cw01/zad2/: CMakeLists.txt  main.c
cw01/zad3a/: CMakeLists.txt
cw01/zad3b/: CMakeLists.txt
cw02/: CMakeLists.txt
cw02/zad1/: CMakeLists.txt  inout_compare.c
cw02/zad2/: CMakeLists.txt  stack.h
cw03/: CMakeLists.txt
cw03/zad1/: CMakeLists.txt  nftw.c  opendir.c  stack.c  stack.h
cw03/zad2/: CMakeLists.txt  batch_processing.c  words.c  words.h
cw03/zad3/: CMakeLists.txt  batch_processing.c  test_cpu.c  test_memory.c
cw03/zad3b/: test.c
cw04/: CMakeLists.txt
cw04/zad1/: CMakeLists.txt  date.sh  signals.c
cw04/zad2/: CMakeLists.txt  sigusr.c
cw04/zad3/: CMakeLists.txt  zad3.c
cw05/: CMakeLists.txt
cw05/zad1/: CMakeLists.txt  batch_processing.c  words.c  words.h
cw05/zad2/: CMakeLists.txt  master-slave.sh  master.c  slave.c
cw06/: CMakeLists.txt
cw06/zad1/: CMakeLists.txt  client.c  server.c  systemv.h
cw06/zad2/: CMakeLists.txt  client.c  posix.h  server.c
cw07/: CMakeLists.txt
cw07/zad1/: CMakeLists.txt  barber.c  client.c  systemv.h
cw07/zad2/: CMakeLists.txt  barber.c  client.c  posix.h
cw08/: CMakeLists.txt
cw08/zad1/: CMakeLists.txt  filter.c  floats45  floats65  floats7  floats_gaussian  gen_filter.py
cw09/: CMakeLists.txt  conf  inf.txt
cw09/zad1/: CMakeLists.txt  mutex.c
cw09/zad2/: CMakeLists.txt  sem.c
cw10/: CMakeLists.txt  calc.h
cw10/zad1/: CMakeLists.txt  client.c  server.c
cw10/zad2/: CMakeLists.txt  client.c  server.c
